[gd_scene load_steps=3 format=3 uid="uid://cj7ac5e7gg3g0"]

[ext_resource type="Script" uid="uid://6yca0g8kdlxg" path="res://scene/manager/enemy_wave_manager/enemy_wave_manager.gd" id="1_8m1tq"]
[ext_resource type="PackedScene" uid="uid://dccvow1gogfla" path="res://scene/component/spawner/spawner_component.tscn" id="2_8m1tq"]

[node name="EnemyWaveManager" type="Node2D"]
script = ExtResource("1_8m1tq")

[node name="SpawnerComponent" parent="." instance=ExtResource("2_8m1tq")]

[connection signal="onEntitySpawn" from="SpawnerComponent" to="." method="_on_spawner_component_on_entity_spawn"]
[connection signal="onSpawnQueueCompleted" from="SpawnerComponent" to="." method="_on_spawner_component_on_spawn_queue_completed"]
